# deltalake_to_pg

./: .env.dist  Cargo.toml  LICENSE  README.md
src/: main.rs
